fix: 引用java方法的参数存在嵌套引用时解析错误